--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@
     letter-spacing: 0;
     top: 55px;
     background: #1c1a19;
+    overflow: hidden; 
   }
   
   #jobTitle {
@@ -114,5 +115,14 @@
   
   .fa {
     color: #dbd8d7;
-  }
-  
+  } 
+
+   /* Style background image of first page */
+
+   #bg-img {
+    position: absolute;
+    width: 406.89px;
+    height: 312.03px;
+    left: 120px;
+    top: 292px;  
+   }
