Add styles to language link

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
 * {
   box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
 }
 
 #navbar {
+    position: fixed;
+    z-index: 1;
     display: flex;
     justify-content: space-between;
     margin-left: 0;
@@ -28,6 +32,7 @@
   #profileName {
     color: white;
     margin-left: 20px;
+    margin-top: 15px;
     font-size: 18px;
     font-family: "Roboto", sans-serif;
   }
@@ -103,7 +108,7 @@
     position: absolute;
     width: 200px;
     height: 27px;
-    left: 5px;
+    left: 30px;
     top: 415px;
     display: flex;
     justify-content: space-between;
@@ -132,19 +137,140 @@
   .work-section-grid {
     height: 3407px;
     width: 375px;
-    position: absolute;
+    position: relative;
     top: 682px;
     left: 0px;
     display: grid;
     grid-template-columns: 375px;
     grid-template-rows: 785px repeat(6, 410px);
     padding: 120px 24px 120px 24px;
+    background-color: #eeeeee;
    }
 
    #img_01 {
     width: 327px;
     height: 237px;
    }
+#topic {
+  position:absolute;
+  top: 5px;
+  left: 20px;
+  font-family: Crete Round;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 40px;
+  line-height: 52px;
+  color: #1C1A19;
+}
 
-
+hr {
+  position: relative;
+  top: 25px;
+  left: -5px
+}
    
+#story {
+  font-family: "Crete Round", san-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 32px;
+  line-height: 44px;
+  margin-top: 10px;
+}
+
+#story-text {
+  width: 327px;
+  height: 147px;
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  color: #091E42;
+}
+
+/* style the lang links */
+
+.html,.bootstrap,.ruby,.css {
+  background: rgba(255, 255, 255, 0.24);
+  font-family: 'Inter' , san;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  color: #091E42;
+  text-align: center;
+  padding: 10px 12px;
+  border: 1px solid #8993A4;
+}
+
+/* style css link */
+.css {
+  width: 40px;
+  height: 40px;
+
+}
+
+/* html link */
+.html {
+  width: 56px;
+  height: 40px;
+}
+
+/* bootstrap link */
+
+.bootstrap {
+  width: 95px;
+  height: 40px; 
+}
+
+/* ruby */
+
+.ruby {
+  width: 61px;
+  height: 40px; 
+}
+
+.project-link {
+  width: 280px;
+  height: 56px;
+  position: relative;
+  top: -20px;
+  margin-left: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.content_1 .project-link {
+  width: 260px;
+  top: -185px;
+}
+
+.grid-content {
+  width: 357px;
+  height: 410px;
+}
+
+img {
+  /* width: 100%;
+  display: block; */
+  height: 386px;
+  width: 327px;
+}
+
+#goto_project {
+  position: absolute;
+  top: 585px;
+  width: 124px;
+  height: 48px;
+  background: #FF6B00;
+  align-items: center;
+  padding: 12px;
+  color: white;
+  font-weight: 700;
+  font-size: 17px;
+  font-family: 'Inter';
+  line-height: 24px;
+  font-style: normal;
+}
