Add greeting-text into section tag in index.html

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,8 @@
   margin-left: 20px;
   font-size: 18px;
   font-family: "Roboto", sans-serif;
+  align-items: center;
+  padding-bottom: 15px;
 }
 
 #greetText {
@@ -41,8 +43,8 @@
   font-family: "Crete Round", sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 24px;
-  line-height: 40px;
+  font-size: 56px;
+  line-height: 64px;
   letter-spacing: 0.37px;
   color: #ff6b00;
 }
@@ -103,8 +105,8 @@
   position: absolute;
   width: 200px;
   height: 27px;
-  left: 5px;
-  top: 415px;
+  left: 0px;
+  top: 470px;
   display: flex;
   justify-content: space-between;
 }
