--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@
   position: absolute;
   width: 200px;
   height: 27px;
-  left: 0px;
+  left: 0;
   top: 470px;
   display: flex;
   justify-content: space-between;
