--- a/styles.css
+++ b/styles.css
@@ -320,4 +320,23 @@ img {
   color: #ffffff;
 }
 
+.content_1 .goto_project {
+  width: 327px;
+  position: relative;
+  top: -270px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 17px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+  padding-left: 110px;
+}
+
+    
+
 
