solve linters err

--- a/styles.css
+++ b/styles.css
@@ -435,7 +435,7 @@ img {
   justify-content: space-between;
   position: absolute;
   width: 375px;
-  height: 900px;
+  height: 900px;git
   left: 120px;
   top: 790px;
 }
